--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                                         <div class="design">
                                             <h1>Design</h1>
                                             <div class="design-list">
-                                                <div class="design-item1"><p>figma</p></div>
-                                                <div class="design-item2"><p>medibang</p></div>
+                                                <div class="design-item1"><p>Figma</p></div>
+                                                <div class="design-item2"><p>Medibang</p></div>
                                             </div>
                                         </div>
                                         <div class="language">
@@ -86,9 +86,9 @@
                                         <div class="version-control">
                                             <h1>Version Control</h1>
                                             <div class="vc-list">
-                                                <div class="version-item1"><p>git</p></div>
-                                                <div class="version-item2"><p>github</p></div>
-                                                <div class="version-item3"><p>gitlens</p></div>
+                                                <div class="version-item1"><p>Git</p></div>
+                                                <div class="version-item2"><p>Github</p></div>
+                                                <div class="version-item3"><p>Gitlens</p></div>
                                             </div>
                                             
                                         </div>    
