--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <section class="section2">
             <div class="contain-widget">
                 <div class="line"></div>
+                <div class="line1"></div>
                 <div class="widget-item1">
                     <div class="item-welcome">
                         <div class="h1">
@@ -94,14 +95,49 @@
                                         </div>    
                                     </div>                                   
                                     <div class="contain-skill-info">
+                                    </div>                                    
+                                </div>                                                               
+                            </div>
+                            <div class="projects">
+                                <h1>Projects</h1>
+                                <div class="container-projects">
+                                        <div class="project-item1">
+                                                <div class="contain-img">
+                                                    <img src="img/uta.jpg" alt="img">
+                                                </div>
+                                                <div class="contain-text">
+                                                    <h1><strong>UTA</strong></h1>
+                                                    <p>multi-purpose application.</p>
+                                                    <p>10-22-24</p>
+                                                </div>
+                                            
+                                        </div>
+                                        <div class="project-item2">
 
-                                    </div>
+                                        </div>
+                                        <div class="project-item3">
+
+                                        </div>
+                                        <div class="project-item4">
+
+                                        </div>
+                                        <div class="project-item5">
+
+                                        </div>
+                                        <div class="project-item5">
+
+                                        </div>                                        
+                                        <div class="project-item6">
+
+                                        </div>
                                 </div>
-                                
+                            </div> 
+                            <div class="credits">
+                                <p>&#169; 2024-2030 Jherson Bartolay. All rights reserved.
+                                </p>
                             </div>
                         </div>
                     </div>
-                    <div class="item-skills"></div>
                 </div>
             </div>
         </section>
